@@ -1,7 +1,5 @@
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
 group = 'com.genius.primavera'
 version = '0.0.1-SNAPSHOT'
@@ -22,11 +20,6 @@ tasks.withType(JavaCompile).each {
 }
 
 test {
-    jvmArgs(['--enable-preview'])
-}
-
-bootRun {
-    main = 'com.genius.primavera.PrimaveraApplication'
     jvmArgs(['--enable-preview'])
 }
 
